update most dependencies

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     ]
   },
   "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "typescript": "3.6.3"
+    "@types/jest": "25.1.4",
+    "@types/node": "13.9.1",
+    "@types/react": "16.9.23",
+    "@types/react-dom": "16.9.5",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "react-scripts": "3.4.0",
+    "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,15 +39,15 @@
     ]
   },
   "devDependencies": {
-    "@babel/register": "^7.6.0",
+    "@babel/register": "^7.8.6",
     "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^9.0.1",
-    "cross-env": "^6.0.0",
+    "babel-preset-react-app": "^9.1.1",
+    "cross-env": "^7.0.2",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "ignore-styles": "^5.0.1",
-    "jasmine": "^3.4.0",
+    "jasmine": "3.5.0",
     "jasmine-enzyme": "^7.1.1",
-    "jsdom": "^15.1.1"
+    "jsdom": "^16.2.1"
   }
 }
